--- a/src/resources/views/user/home.ejs
+++ b/src/resources/views/user/home.ejs
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
         <div class="san_pham_noi_bat mt-5">
-            <h3 class="text-center"> Sản phẩm nổi bật</h3>
+            <p class="text-center title"> Sản phẩm nổi bật</p>
             <div class=" san_pham_noi_bat_1 owl-carousel owl-theme mt-5">
                 <div class="item">
                     <div class="card">
@@ -118,7 +118,7 @@
         </div>
 
         <div class="hang_san_xuat text-center pt-3 ">
-            <h3 class="pb-5"> Hãng máy tính hàng đầu</h3>
+            <h3 class="pb-5 title2"> Hãng máy tính hàng đầu</h3>
             <a href="#" class="  "><img src="img/hp.png"></a>
             <a href="#" class=" mx-2 "><img src="img/lenovo.png"></a>
             <a href="#" class=" mx-2 "><img src="img/macbook.png"></a>
@@ -128,74 +128,32 @@
             <a href="#" class=" mx-2 "><img src="img/acer.png"></a>
         </div>
 
-        <div class="bo_loc mt-5">
-            <h3> Chọn theo tiêu chí </h3>
-            <div class="d-flex">
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>Giá</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>Bộ nhớ</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>Ram</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>CPU</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>Độ phân giải</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-                <select class="form-select mx-2" aria-label="Default select example">
-                    <option selected>Hãng</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
-        </div>
-
         <div class="danh_sach_san_pham mt-5">
-            <h3 class="mt-5"> Danh sách sản phẩm </h3>
+            <h3 class="mt-5" style="font-weight: 600;"> Danh sách sản phẩm </h3>
             <div class="row">
                 <% if (data && data.length> 0) { %>
                     <% data.forEach(function (product, index) { %>
-                        <div class="col-md-3 mt-5">
+                        <div class="col-md-5 col-lg-3 mt-5">
                             <div class="card">
                                 <a href="/chi_tiet_sp/<%= product.chi_tiet_id %>">
                                     <img src="imgUpload/<%= product.hinh_anh %>" class="card-img-top" alt="...">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">
-                                        <%= product.ten_san_pham %> màu <%= product.ten_mau_sac %>
+                                    <h5 class="card-title" style="font-weight: 600;">
+                                        <%= product.ten_san_pham %>
                                     </h5>
                                     <div class="card-body d-flex p-0">
-                                        <p class="card-link">Ram 8GB</p>
-                                        <p class="card-link">SSD <%= product.ten_dung_luong %>
+                                        <p class="card-link m-0">Dung lượng: <%= product.ten_dung_luong %>
                                         </p>
                                     </div>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Giá: <%= product.gia_ban %> vnd</li>
-                                    </ul>
+                                    <p class="m-0">Màu: <%= product.ten_mau_sac %>
+                                    </p>
+                                    <p class="m0">Giá: <%= product.gia_ban %> vnd</p>
+
                                     <div class="text-center d-flex">
-                                        <a href="/add_to_cart/<%= product.chi_tiet_id %>" class="btn btn-primary">Thêm
-                                            với giỏ hàng</a>
-                                        <a href="/dat_hang/<%= product.chi_tiet_id %>" class="btn btn-success">Mua
+                                        <a href="/add_to_cart/<%= product.chi_tiet_id %>"
+                                            class="btn btn-primary ms-4"><i class="fa-solid fa-cart-shopping"></i></a>
+                                        <a href="/dat_hang/<%= product.chi_tiet_id %>" class="btn btn-success ms-5">Mua
                                             ngay</a>
                                     </div>
                                 </div>
@@ -253,75 +211,6 @@
 
                             Lưu trữ được nhiều dữ liệu: Các ổ cứng trên laptop thường có dung lượng lớn, nhờ đó bạn có
                             thể lưu trữ được nhiều dữ liệu một cách nhanh chóng.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="cau_hoi mt-5">
-                <h3 class="mt-3"> Câu hỏi thường gặp </h3>
-                <p class="dropdown-toggle c1" id="c1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Làm sao để chọn mua laptop đúng chuẩn?
-                </p>
-                <div class="dropdown-menu content_c1" aria-labelledby="c1">
-                    <div>Để chọn mua laptop đúng với nhu cầu sử dụng, người dùng cần:</div>
-                    <ul>
-                        <li>Xác định rõ nhu cầu sử dụng</li>
-                        <li>Chọn dung lượng bộ nhớ RAM phù hợp</li>
-                        <li>Tốc độ - xung nhịp CPU</li>
-                        <li>Loại và dung lượng ổ cứng</li>
-                        <li>Kích thước – độ phân giải màn hình</li>
-                        <li>Thương hiệu laptop&nbsp;</li>
-                    </ul>
-                </div>
-
-                <p class="dropdown-toggle c1" id="c2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Nên chọn mua laptop bao nhiêu RAM là đủ?
-                </p>
-                <div class="dropdown-menu content_c1" aria-labelledby="c2">
-                    <div class="content-wrapper">
-                        <div>
-                            <div>Không có quy chuẩn nhất định nào khi chọn dung lượng RAM laptop. Laptop sở hữu dung
-                                lượng RAM càng lớn thì khả năng truy cập – đa nhiệm càng mượt, nhưng giá thành theo đó
-                                cũng tăng cao. Do đó tùy thuộc vào nhu cầu sử dụng để chọn dung lượng bộ nhớ RAM phù
-                                hợp.</div>
-                            <ul>
-                                <li><strong>RAM 4GB</strong>: Nhu cầu sử dụng cơ bản ( Soạn thảo, xem video, trả lời tin
-                                    nhắn)</li>
-                                <li><strong>RAM 8GB</strong>: Thường sử dụng cho laptop kinh doanh hoặc đồ họa. Thích
-                                    hợp với nhu cầu sử dụng thiết kế đồ họa 2D (Photoshop, AI, Corel…) &nbsp;</li>
-                                <li><strong>RAM 16GB</strong>: Thích hợp sử dụng để chơi game hoặc làm các công việc đồ
-                                    họa nặng 3D (3D Max, Maya…) hoặc dựng phim</li>
-                                <li><strong>RAM 32GB</strong>: Thích hợp cho dân phải phân tích dữ liệu lớn, video
-                                    editor hay photographer chuyên nghiệp</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <p class="dropdown-toggle c1" id="c3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Làm sao để chọn mua laptop đúng chuẩn?
-                </p>
-                <div class="dropdown-menu content_c1" aria-labelledby="c3">
-                    <div class="content-wrapper">
-                        <div>
-                            <div>Vời người dùng là học sinh sinh viên thì nhu cầu sử dụng cơ bản thường là sử dụng phần
-                                mềm Office (Word, Excel, PowerPoint,..) hay lướt web, xem phim do đó có thể tham khảo
-                                các dòng laptop giá bán <strong>dưới 20 triệu</strong> có cấu hình từ <strong>i5, R5 trở
-                                    xuống</strong>, bộ nhớ <strong>RAM từ 4GB đến 8GB.</strong><br><br></div>
-                            <div>Một số dòng laptop mà sinh viên có thể tham khảo như:</div>
-                            <ul>
-                                <li>HP Pavilion</li>
-                                <li>Lenovo IdeaPad</li>
-                                <li>Acer Aspire</li>
-                                <li>ASUS VivoBook</li>
-                                <li>Dell Inspiron</li>
-                            </ul>
-                            <div>&nbsp;</div>
-                            <div>Tuy nhiên, với một số ngành học đặc thù như CNTT, Đồ họa, Dựng phim,… thì cần cân nhắc
-                                đến phân khúc giá cao hơn để có thể chọn được dòng laptop đúng với nhu cầu sử dụng.
-                            </div>
-                            <div>&nbsp;</div>
-                        </div>
                     </div>
                 </div>
             </div>
