--- a/src/public/css/user.css
+++ b/src/public/css/user.css
@@ -111,10 +111,6 @@ menu .toggle {
 .form_input {
   width: 90%;
 }
-.cart {
-  margin-top: 7px;
-  margin-left: 110px;
-}
 
 .hang_san_xuat {
   background-color: white;
@@ -482,4 +478,80 @@ a {
 
 .nav_order {
   background-color: #ccc;
+}
+
+#navbarSupportedContent {
+  background-color: transparent;
+}
+
+.text_content_header {
+  color: white;
+  font-size: 23px;
+  font-weight: 900;
+  margin-left: 45px;
+}
+
+.search_form {
+  margin-left: 85px;
+}
+
+.cart {
+  margin-right: 35px;
+  font-size: 25px;
+  color: white;
+}
+
+.order {
+}
+
+.search_input {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.search_input:focus {
+  border: none;
+  outline: none;
+}
+.search_btn {
+  display: block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.title {
+  font-size: 40px;
+  font-weight: 600;
+}
+.title2 {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.font-weight {
+  font-weight: 600;
 }
