--- a/src/resources/views/user/bao_hanh.ejs
+++ b/src/resources/views/user/bao_hanh.ejs
@@ -1,145 +1,144 @@
 <%- include('headerUser.ejs') %>
-    <div class="container" style="margin-top: 50px; margin-bottom: 150px">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="link_order">
-                    <div class="user_order">
-                        <p>
-                            <%= user.ho_ten %>
-                        </p>
-                    </div>
-                    <ul class="">
-                        <li class="item_"><a href="/tai_khoan">Tài khoản của tôi</a></li>
-                        <li class="item_ mt-3"><a href="/order">Dơn mua hàng</a></li>
-                        <li class="item_ mt-3"><a href="/bao_hanh">Đơn bảo hành</a></li>
-                        <li class="item_ mt-3 pb-3"><a href="/lich_su_mua_hang">Lịch sử mua hàng</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-9">
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#cho_xac_nhan" data-toggle="tab">Chờ xác nhận</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#da_xac_nhan" data-toggle="tab">Đã xác nhận</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#dang_giao" data-toggle="tab">Thực hiện</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#da_giao" data-toggle="tab">Đã hoàn thành</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#da_huy" data-toggle="tab">Đã hủy</a>
-                    </li>
-                </ul>
-
-                <div class="tab-content mt-1">
-                    <div class="tab-pane active link_order" id="cho_xac_nhan">
-                        <div class="">
-                            <% if (data.length> 0) {
-                                var hasActiveOrder = false;
-                                data.forEach(function(data_item, index) {
-                                if (data_item.trang_thai === 1) {
-                                hasActiveOrder = true;
-                                %>
-                                <div class="row">
-                                  <div class="">
-                                    <p class="user_order text-start">ĐƠN BẢO HÀNH: <%= data_item.id %>
-                                    </p>
-                                  </div>
-                                  
-                                    <div class="row">
-                                      <div class="col-lg-3">
-                                        <img style="width: 150px; height: 100px;" class="img-thumbnail"
-                                          src="/imgUpload/<%= data_item.hinh_anh_chi_tiet %>">
-                                      </div>
-                                      <div class="col-lg-4">
-                                        <p>Thông tin sản phẩm</p>
-                                        <p>
-                                            <%= data_item.ten_san_pham %> - <%= data_item.ten_mau_sac %> - <%= data_item.ten_dung_luong %>
-                                        </p>
-                                      </div>
-                                      <div class="col-lg-5">
-                                        <p>Lí do bảo hành</p>
-                                        <p>
-                                            <%= data_item.ghi_chu %>
-                                        </p>
-                                      </div>
-                                    </div>
-                                                                         
-                                        <div class="text-end">
-                                          <a href="#" onclick=""
-                                            class="btn btn-outline-danger mx-2 mb-3">Hủy đơn hàng</a>
-                                        </div>
-                                </div>
-                                <% } }); if (!hasActiveOrder) { %>
-                                  <p>Không có dữ liệu</p>
-                                  <% } } else { %>
-                                    <p>Không có dữ liệu</p>
-                                    <% } %>
-                        </div>
-                    </div>
-                    <div class="tab-pane" id="da_xac_nhan">
-                        <% if (data.length> 0) {
-                            var hasActiveOrder = false;
-                            data.forEach(function(data_item, index) {
-                            if (data_item.trang_thai === 2) {
-                            hasActiveOrder = true;
-                            %>
-                            <div class="row">
-                              <div class="">
-                                <p class="user_order text-start">ĐƠN BẢO HÀNH: <%= data_item.id %>
-                                </p>
-                              </div>
-                              
-                                <div class="row">
-                                  <div class="col-lg-3">
-                                    <img style="width: 150px; height: 100px;" class="img-thumbnail"
-                                      src="/imgUpload/<%= data_item.hinh_anh_chi_tiet %>">
-                                  </div>
-                                  <div class="col-lg-4">
-                                    <p>Thông tin sản phẩm</p>
-                                    <p>
-                                        <%= data_item.ten_san_pham %> - <%= data_item.ten_mau_sac %> - <%= data_item.ten_dung_luong %>
-                                    </p>
-                                  </div>
-                                  <div class="col-lg-5">
-                                    <p>Lí do bảo hành</p>
-                                    <p>
-                                        <%= data_item.ghi_chu %>
-                                    </p>
-                                  </div>
-                                </div>
-                                                                     
-                                    <div class="text-end">
-                                      
-                                    </div>
-                            </div>
-                            <% } }); if (!hasActiveOrder) { %>
-                              <p>Không có dữ liệu</p>
-                              <% } } else { %>
-                                <p>Không có dữ liệu</p>
-                                <% } %>
-                    </div>
-                    <div class="tab-pane" id="dang_giao">
-
-                    </div>
-                    <div class="tab-pane" id="da_giao">
-
-                    </div>
-                    <div class="tab-pane" id="thanh_cong">
-
-                    </div>
-                    <div class="tab-pane" id="da_huy">
-
-                    </div>
-                </div>
-            </div>
+  <div class="container" style="margin-top: 50px; margin-bottom: 150px">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="link_order">
+          <div class="user_order">
+            <p>
+              <%= user.ho_ten %>
+            </p>
+          </div>
+          <ul class="">
+            <li class="item_"><a href="/tai_khoan">Tài khoản của tôi</a></li>
+            <li class="item_ mt-3"><a href="/order">Dơn mua hàng</a></li>
+            <li class="item_ mt-3"><a href="/bao_hanh">Đơn bảo hành</a></li>
+            <li class="item_ mt-3 pb-3"><a href="/lich_su_mua_hang">Lịch sử mua hàng</a></li>
+          </ul>
         </div>
-    </div>
+      </div>
+      <div class="col-lg-9">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link font-weight active" href="#cho_xac_nhan" data-toggle="tab">Chờ xác nhận</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight" href="#da_xac_nhan" data-toggle="tab">Đã xác nhận</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight" href="#dang_giao" data-toggle="tab">Thực hiện</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight" href="#da_giao" data-toggle="tab">Đã hoàn thành</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight" href="#da_huy" data-toggle="tab">Đã hủy</a>
+          </li>
+        </ul>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <%- include('footerUser.ejs') %>
+        <div class="tab-content mt-1">
+          <div class="tab-pane active link_order" id="cho_xac_nhan">
+            <div class="">
+              <% if (data.length> 0) {
+                var hasActiveOrder = false;
+                data.forEach(function(data_item, index) {
+                if (data_item.trang_thai === 1) {
+                hasActiveOrder = true;
+                %>
+                <div class="row">
+                  <div class="">
+                    <p class="user_order text-start">ĐƠN BẢO HÀNH: <%= data_item.id %>
+                    </p>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-lg-3">
+                      <img style="width: 150px; height: 100px;" class="img-thumbnail"
+                        src="/imgUpload/<%= data_item.hinh_anh_chi_tiet %>">
+                    </div>
+                    <div class="col-lg-4">
+                      <p>Thông tin sản phẩm</p>
+                      <p>
+                        <%= data_item.ten_san_pham %> - <%= data_item.ten_mau_sac %> - <%= data_item.ten_dung_luong %>
+                      </p>
+                    </div>
+                    <div class="col-lg-5">
+                      <p>Lí do bảo hành</p>
+                      <p>
+                        <%= data_item.ghi_chu %>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="text-end">
+                    <a href="#" onclick="" class="btn btn-outline-danger mx-2 mb-3">Hủy đơn hàng</a>
+                  </div>
+                </div>
+                <% } }); if (!hasActiveOrder) { %>
+                  <p>Không có dữ liệu</p>
+                  <% } } else { %>
+                    <p>Không có dữ liệu</p>
+                    <% } %>
+            </div>
+          </div>
+          <div class="tab-pane" id="da_xac_nhan">
+            <% if (data.length> 0) {
+              var hasActiveOrder = false;
+              data.forEach(function(data_item, index) {
+              if (data_item.trang_thai === 2) {
+              hasActiveOrder = true;
+              %>
+              <div class="row">
+                <div class="">
+                  <p class="user_order text-start">ĐƠN BẢO HÀNH: <%= data_item.id %>
+                  </p>
+                </div>
+
+                <div class="row">
+                  <div class="col-lg-3">
+                    <img style="width: 150px; height: 100px;" class="img-thumbnail"
+                      src="/imgUpload/<%= data_item.hinh_anh_chi_tiet %>">
+                  </div>
+                  <div class="col-lg-4">
+                    <p>Thông tin sản phẩm</p>
+                    <p>
+                      <%= data_item.ten_san_pham %> - <%= data_item.ten_mau_sac %> - <%= data_item.ten_dung_luong %>
+                    </p>
+                  </div>
+                  <div class="col-lg-5">
+                    <p>Lí do bảo hành</p>
+                    <p>
+                      <%= data_item.ghi_chu %>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="text-end">
+
+                </div>
+              </div>
+              <% } }); if (!hasActiveOrder) { %>
+                <p>Không có dữ liệu</p>
+                <% } } else { %>
+                  <p>Không có dữ liệu</p>
+                  <% } %>
+          </div>
+          <div class="tab-pane" id="dang_giao">
+
+          </div>
+          <div class="tab-pane" id="da_giao">
+
+          </div>
+          <div class="tab-pane" id="thanh_cong">
+
+          </div>
+          <div class="tab-pane" id="da_huy">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+  <%- include('footerUser.ejs') %>
