--- a/src/resources/views/user/dat_hang_cart.ejs
+++ b/src/resources/views/user/dat_hang_cart.ejs
@@ -2,14 +2,15 @@
 
     <div class="container" style=" margin-bottom: 150px">
         <div>
-            <h3 class="text-start">ĐẶT HÀNG </h3>
+            <h3 class="text-start mt-3 title2">ĐẶT HÀNG </h3>
             <div class="row">
                 <div class="col-lg-9">
-                    <p>Địa chỉ: <span id="ho_ten">
+                    <p> <span class="font-weight">Khách hàng: </span> <span id="ho_ten">
                             <%= user.ho_ten %>
-                        </span> - <span id="so_dien_thoai">
+                        </span> - sdt: <span id="so_dien_thoai">
                             <%= user.so_dien_thoai %>
-                        </span> - <span id="dia_chi">
+                        </span></p>
+                    <p> <span class="font-weight"> Địa chỉ: </span> <span id="dia_chi">
                             <%= user.dia_chi %>
                         </span></p>
                 </div>
@@ -83,14 +84,13 @@
                     </div>
                 </div>
             </div>
-            <textarea id="ghi_chu" style="width: 100%;" placeholder="Ghi chu"></textarea>
+            <textarea id="ghi_chu" class="form-control" style="width: 100%;" placeholder="Ghi chu"></textarea>
         </div>
 
         <div>
-            <table style="margin-top: 50px;"
-                class="table table-PW table-striped table-hover table-borderless align-middle">
-                <thead class="table-light">
-                    <tr>
+            <table style="margin-top: 50px;" class="table table-PW table-hover table-borderless align-middle">
+                <thead class="">
+                    <tr style="background-color: #e9e9e9;">
                         <th class="text-center">Hình ảnh</th>
                         <th>Sản phẩm</th>
                         <th>Mau sắc</th>
@@ -129,10 +129,10 @@
                                     </div>
                                 </td>
                                 <td id="gia_ban">
-                                    <%= item.gia_ban %>
+                                    <%= item.gia_ban %> <span>đ</span>
                                 </td>
                                 <td><span id="tong_gia">
-                                        <%= item.gia_ban * item.so_luong %> %>
+                                        <%= item.gia_ban * item.so_luong %> %> <span>đ</span>
                                     </span></td>
 
                             </tr>
@@ -148,16 +148,16 @@
             </table>
             <div class="row mt-5">
                 <div class="col-lg-4">
-                    <p>PHƯƠNG THỨC THANH TOÁN</p>
+                    <p class="font-weight">PHƯƠNG THỨC THANH TOÁN</p>
                     <hr>
-                    <select id="hinh_thuc_thanh_toan">
+                    <select id="hinh_thuc_thanh_toan" class="form-control">
                         <option value="1">Thanh toán khi nhận hàng</option>
                         <option value="2">Thanh toán bằng ngân hàng</option>
                     </select>
                 </div>
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4">
-                    <p>TỔNG TIỀN</p>
+                    <p class="font-weight">TỔNG TIỀN</p>
                     <hr>
                     <p>Phí vận chuyển: ...</p>
                     <p id="tong_tien_thanh_toan">Tổng tiền:</p>
