--- a/src/resources/views/admin/hoa_don/add_hoa_don.ejs
+++ b/src/resources/views/admin/hoa_don/add_hoa_don.ejs
@@ -60,12 +60,12 @@
 
         <script>
             let selectedProducts = []; // Danh sách sản phẩm đã chọn
-        
+
             function submitOrderForm(event) {
                 event.preventDefault(); // Ngăn chặn hành động mặc định của form
-        
+
                 let khachHangId, ten_khach_hang_id, sdt, dia_chi, ghi_chu;
-        
+
                 const selectedRadioButton = document.querySelector('input[name="khach_hang_id"]:checked');
                 if (selectedRadioButton) {
                     khachHangId = selectedRadioButton.value; // Lấy giá trị từ radio button được chọn
@@ -81,13 +81,13 @@
                     dia_chi = document.getElementById('dia_chi_f').value;
                     ghi_chu = document.getElementById('ghi_chu_id').value;
                 }
-        
+
                 const selectedProductsData = selectedProducts.map(product => ({
                     id: product.id,
                     so_luong: product.so_luong,
                     gia: product.gia
                 }));
-        
+
                 fetch('/admin/them_don_mua_hang_get', {
                     method: 'POST',
                     headers: {
@@ -102,21 +102,21 @@
                         san_pham: selectedProductsData
                     })
                 })
-                .then(response => {
-                    if (response.ok) {
-                        return response.json();
-                    }
-                    throw new Error('Đã xảy ra lỗi khi thêm hóa đơn.');
-                })
-                .then(data => {
-                    alert('Đã thêm hóa đơn thành công!');
-                    window.location.href = '/admin/hoadon';
-                })
-                .catch(error => {
-                    console.error('Lỗi khi thêm hóa đơn:', error);
-                });
+                    .then(response => {
+                        if (response.ok) {
+                            return response.json();
+                        }
+                        throw new Error('Đã xảy ra lỗi khi thêm hóa đơn.');
+                    })
+                    .then(data => {
+                        alert('Đã thêm hóa đơn thành công!');
+                        window.location.href = '/admin/hoadon';
+                    })
+                    .catch(error => {
+                        console.error('Lỗi khi thêm hóa đơn:', error);
+                    });
             }
-        
+
             function searchCustomers() {
                 const keyword = document.getElementById('searchCustomer').value;
                 fetch(`/admin/search_khach_hang_hd?ten_khach_hang=${keyword}`)
@@ -124,7 +124,7 @@
                     .then(data => displaySearchCustomersResults(data))
                     .catch(error => console.error('Lỗi khi tìm kiếm khách hàng:', error));
             }
-        
+
             function displaySearchCustomersResults(results) {
                 const searchResultDiv = document.getElementById('searchCustomerResult');
                 searchResultDiv.innerHTML = '';
@@ -138,7 +138,7 @@
                     searchResultDiv.innerHTML += `<div>${customerId + customerName + ' - ' + lb_diachi + sdt + dia_chi + br}</div>`;
                 });
             }
-        
+
             function searchProducts() {
                 const keyword = document.getElementById('searchProduct').value;
                 fetch(`/admin/search_sp_hd?name=${keyword}`)
@@ -146,44 +146,128 @@
                     .then(data => displaySearchResults(data))
                     .catch(error => console.error('Lỗi khi tìm kiếm sản phẩm:', error));
             }
-        
+
+            // function displaySearchResults(results) {
+            //     const searchResultDiv = document.getElementById('searchResult');
+            //     searchResultDiv.innerHTML = '';
+            //     results.forEach(product => {
+            //         const checkbox = `<input type="checkbox" name="san_pham_id" value="${product.id}" ${selectedProducts.some(item => item.id === product.id) ? 'checked' : ''} onclick="toggleCheckbox(${product.id}, ${product.gia_ban})">`;
+            //         const image = `<img src="${product.hinh_anh}">`;
+            //         const productName = `<span>${product.ten_san_pham}</span>`;
+            //         const price = `<span>Giá: ${product.gia_ban}đ</span>`;
+            //         const color = `<span>Màu sắc: ${product.ten_mau_sac}</span>`;
+            //         const capacity = `<span>Dung lượng: ${product.ten_dung_luong}</span>`;
+            //         const br = '<br>';
+            //         const quantityInput = `<input type="number" name="so_luong" value="1" min="1" max="100" onchange="updateQuantity(${product.id}, this.value)">`;
+            //         const priceInput = `<input hidden type="number" name="gia" value="${product.gia_ban}" readonly>`;
+            //         searchResultDiv.innerHTML += `<div>${checkbox + image + productName + price + color + capacity + quantityInput + priceInput + br}</div>`;
+            //     });
+            // }
+
+            // function toggleCheckbox(id, price) {
+            //     const checkbox = document.querySelector(`input[name="san_pham_id"][value="${id}"]:checked`);
+            //     if (checkbox) {
+            //         const quantityInput = checkbox.parentElement.querySelector('input[name="so_luong"]');
+
+            //         const product = {
+            //             id: id,
+            //             so_luong: quantityInput.value,
+            //             gia: price
+            //         };
+
+            //         const index = selectedProducts.findIndex(item => item.id === id);
+            //         if (index === -1) {
+            //             selectedProducts.push(product);
+            //         } else {
+            //             selectedProducts[index] = product;
+            //         }
+            //     }
+            // }
+
             function displaySearchResults(results) {
                 const searchResultDiv = document.getElementById('searchResult');
                 searchResultDiv.innerHTML = '';
+
+                let tableContent = `
+        <table style="margin-top: 0px;" class="table table-PW table-hover table-borderless align-middle">
+            <thead class="">
+                <tr style="background-color: #e9e9e9;">
+                    <th class="text-center">Hình ảnh</th>
+                    <th>Sản phẩm</th>
+                    <th>Màu sắc</th>
+                    <th>Dung lượng</th>
+                    <th>Số lượng</th>
+                    <th>Giá</th>
+                    <th>Chọn</th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider">
+    `;
+
                 results.forEach(product => {
                     const checkbox = `<input type="checkbox" name="san_pham_id" value="${product.id}" ${selectedProducts.some(item => item.id === product.id) ? 'checked' : ''} onclick="toggleCheckbox(${product.id}, ${product.gia_ban})">`;
-                    const image = `<img src="${product.hinh_anh}">`;
-                    const productName = `<span>${product.ten_san_pham}</span>`;
-                    const price = `<span>Giá: ${product.gia_ban}đ</span>`;
-                    const color = `<span>Màu sắc: ${product.ten_mau_sac}</span>`;
-                    const capacity = `<span>Dung lượng: ${product.ten_dung_luong}</span>`;
-                    const br = '<br>';
-                    const quantityInput = `<input type="number" name="so_luong" value="1" min="1" max="100" onchange="updateQuantity(${product.id}, this.value)">`;
-                    const priceInput = `<input hidden type="number" name="gia" value="${product.gia_ban}" readonly>`;
-                    searchResultDiv.innerHTML += `<div>${checkbox + image + productName + price + color + capacity + quantityInput + priceInput + br}</div>`;
+                    const image = `<img src="/imgUpload/${product.hinh_anh}" class="img-thumbnail" width="100">`;
+                    const productName = `<td>${product.ten_san_pham}</td>`;
+                    const color = `<td>${product.ten_mau_sac}</td>`;
+                    const capacity = `<td>${product.ten_dung_luong}</td>`;
+                    const quantityInput = `<td><input type="number" style = "width: 70%;" class="form-control" name="so_luong" onchange="updateQuantity(${product.id}, this.value)"></td>`;
+                    const priceInput = `<td><input type="number" style = "width: 70%;" class="form-control" name="gia" value=""></td>`;
+
+                    tableContent += `
+            <tr>
+                <td class="text-center">${image}</td>
+                ${productName}
+                ${color}
+                ${capacity}
+                ${quantityInput}
+                ${priceInput}
+                <td>${checkbox}</td>
+            </tr>
+        `;
                 });
+
+                tableContent += `
+            </tbody>
+        </table>
+    `;
+
+                searchResultDiv.innerHTML = tableContent;
             }
-        
+
             function toggleCheckbox(id, price) {
-                const checkbox = document.querySelector(`input[name="san_pham_id"][value="${id}"]:checked`);
+                // Lấy checkbox dựa trên ID
+                const checkbox = document.querySelector(`input[name="san_pham_id"][value="${id}"]`);
+
                 if (checkbox) {
-                    const quantityInput = checkbox.parentElement.querySelector('input[name="so_luong"]');
-                    
+                    // Kiểm tra trạng thái của checkbox
+                    const isChecked = checkbox.checked;
+
+                    // Lấy phần tử cha của checkbox
+                    const parentElement = checkbox.parentElement.parentElement;
+
+                    // Tìm input 'so_luong' và 'gia' trong phần tử cha
+                    const quantityInput = parentElement.querySelector('input[name="so_luong"]');
+                    const priceInput = parentElement.querySelector('input[name="gia"]');
+
+                    // Tạo đối tượng sản phẩm
                     const product = {
                         id: id,
                         so_luong: quantityInput.value,
-                        gia: price
+                        gia: priceInput.value || price  // Sử dụng giá mới từ tham số hoặc giá hiện tại nếu không có giá mới
                     };
-                    
+
+                    // Tìm và cập nhật sản phẩm trong mảng selectedProducts
                     const index = selectedProducts.findIndex(item => item.id === id);
-                    if (index === -1) {
+                    if (isChecked && index === -1) {
                         selectedProducts.push(product);
-                    } else {
-                        selectedProducts[index] = product;
+                    } else if (!isChecked && index !== -1) {
+                        selectedProducts.splice(index, 1);  // Xóa sản phẩm khỏi mảng nếu checkbox không được chọn
+                    } else if (isChecked && index !== -1) {
+                        selectedProducts[index] = product;  // Cập nhật sản phẩm nếu checkbox được chọn và sản phẩm đã tồn tại trong mảng
                     }
                 }
             }
-        
+
             function updateQuantity(id, quantity) {
                 const index = selectedProducts.findIndex(item => item.id === id);
                 if (index !== -1) {
@@ -191,6 +275,6 @@
                 }
             }
         </script>
-        
+
 
         <%- include('../footer.ejs') %>
