--- a/src/resources/views/admin/nhap_kho/add_nhap_kho.ejs
+++ b/src/resources/views/admin/nhap_kho/add_nhap_kho.ejs
@@ -112,41 +112,100 @@
                     .catch(error => console.error('Lỗi khi tìm kiếm sản phẩm:', error));
             }
 
+            function searchProducts() {
+                const keyword = document.getElementById('searchProduct').value;
+                fetch(`/admin/search_sp_hd?name=${keyword}`)
+                    .then(response => response.json())
+                    .then(data => displaySearchResults(data))
+                    .catch(error => console.error('Lỗi khi tìm kiếm sản phẩm:', error));
+            }
+
             function displaySearchResults(results) {
                 const searchResultDiv = document.getElementById('searchResult');
                 searchResultDiv.innerHTML = '';
+
+                let tableContent = `
+        <table style="margin-top: 0px;" class="table table-PW table-hover table-borderless align-middle">
+            <thead class="">
+                <tr style="background-color: #e9e9e9;">
+                    <th class="text-center">Hình ảnh</th>
+                    <th>Sản phẩm</th>
+                    <th>Màu sắc</th>
+                    <th>Dung lượng</th>
+                    <th>Số lượng</th>
+                    <th>Giá</th>
+                    <th>Chọn</th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider">
+    `;
+
                 results.forEach(product => {
                     const checkbox = `<input type="checkbox" name="san_pham_id" value="${product.id}" ${selectedProducts.some(item => item.id === product.id) ? 'checked' : ''} onclick="toggleCheckbox(${product.id}, ${product.gia_ban})">`;
-                    const image = `<img src="${product.hinh_anh}">`;
-                    const productName = `<span>${product.ten_san_pham}</span>`;
-                    const color = `<span>Màu sắc: ${product.ten_mau_sac}</span>`;
-                    const capacity = `<span>Dung lượng: ${product.ten_dung_luong}</span>`;
-                    const br = '<br>';
-                    const quantityInput = `<input type="number" name="so_luong" onchange="updateQuantity(${product.id}, this.value)">`;
-                    const priceInput = `<input type="number" name="gia" value="">`;
-                    searchResultDiv.innerHTML += `<div>${checkbox + image + productName + color + capacity + 'Số lượng:' + quantityInput + 'Giá:' + priceInput + br}</div>`;
+                    const image = `<img src="/imgUpload/${product.hinh_anh}" class="img-thumbnail" width="100">`;
+                    const productName = `<td>${product.ten_san_pham}</td>`;
+                    const color = `<td>${product.ten_mau_sac}</td>`;
+                    const capacity = `<td>${product.ten_dung_luong}</td>`;
+                    const quantityInput = `<td><input type="number" style = "width: 70%;" class="form-control" name="so_luong" onchange="updateQuantity(${product.id}, this.value)"></td>`;
+                    const priceInput = `<td><input type="number" style = "width: 70%;" class="form-control" name="gia" value=""></td>`;
+
+                    tableContent += `
+            <tr>
+                <td class="text-center">${image}</td>
+                ${productName}
+                ${color}
+                ${capacity}
+                ${quantityInput}
+                ${priceInput}
+                <td>${checkbox}</td>
+            </tr>
+        `;
                 });
+
+                tableContent += `
+            </tbody>
+        </table>
+    `;
+
+                searchResultDiv.innerHTML = tableContent;
             }
 
-            function toggleCheckbox(id, price) {
-                const checkbox = document.querySelector(`input[name="san_pham_id"][value="${id}"]:checked`);
-                if (checkbox) {
-                    const quantityInput = checkbox.parentElement.querySelector('input[name="so_luong"]');
 
+
+            function toggleCheckbox(id, price) {
+                // Lấy checkbox dựa trên ID
+                const checkbox = document.querySelector(`input[name="san_pham_id"][value="${id}"]`);
+
+                if (checkbox) {
+                    // Kiểm tra trạng thái của checkbox
+                    const isChecked = checkbox.checked;
+
+                    // Lấy phần tử cha của checkbox
+                    const parentElement = checkbox.parentElement.parentElement;
+
+                    // Tìm input 'so_luong' và 'gia' trong phần tử cha
+                    const quantityInput = parentElement.querySelector('input[name="so_luong"]');
+                    const priceInput = parentElement.querySelector('input[name="gia"]');
+
+                    // Tạo đối tượng sản phẩm
                     const product = {
                         id: id,
                         so_luong: quantityInput.value,
-                        gia: price
+                        gia: priceInput.value || price  // Sử dụng giá mới từ tham số hoặc giá hiện tại nếu không có giá mới
                     };
 
+                    // Tìm và cập nhật sản phẩm trong mảng selectedProducts
                     const index = selectedProducts.findIndex(item => item.id === id);
-                    if (index === -1) {
+                    if (isChecked && index === -1) {
                         selectedProducts.push(product);
-                    } else {
-                        selectedProducts[index] = product;
+                    } else if (!isChecked && index !== -1) {
+                        selectedProducts.splice(index, 1);  // Xóa sản phẩm khỏi mảng nếu checkbox không được chọn
+                    } else if (isChecked && index !== -1) {
+                        selectedProducts[index] = product;  // Cập nhật sản phẩm nếu checkbox được chọn và sản phẩm đã tồn tại trong mảng
                     }
                 }
             }
+
 
             function updateQuantity(id, quantity) {
                 const index = selectedProducts.findIndex(item => item.id === id);
